assets/css/home.css
/* ... */
  .icon-checkbox:checked ~ .msgr-container {
    opacity: 1;
    transform: translateY(0);
  }
  
  /* controls transition between cat and close icons */
  .icon-checkbox:not(checked) + label svg.close-icon,
  .icon-checkbox:checked + label svg.cat-icon {
    opacity: 0;
  }
  .icon-checkbox:not(checked) + label svg.cat-icon,
  .icon-checkbox:checked + label svg.close-icon {
    opacity: 1;
  }
  
  /* controls slight rotation of cat & close icons */
  .icon-checkbox:checked + label svg.cat-icon {
    transform: translate(-50%, -50%) rotate(15deg);
  }
  .icon-checkbox:not(checked) + label svg.cat-icon {
    transform: translate(-50%, -50%) rotate(0);
  }
  .icon-checkbox:checked + label svg.close-icon {
    transform: translate(-50%, -50%) rotate(0);
  }
  .icon-checkbox:not(checked) + label svg.close-icon {
    transform: translate(-50%, -50%) rotate(-30deg);
  }

  /* MESSENGER */
/* ------------------------------------------ */
.msgr-container {
    position: absolute;
    bottom: 65px;
    right: 2.5%;
    width: 350px;
    height: 100%;
    max-height: 575px;
    box-shadow: 4px 4px 100px rgba(0,0,0,.2);
    border-radius: 10px;
    overflow: hidden;
    transition: all .3s;
    z-index: 2;
    /* min-height: 335px; */
  }
  .messenger {
    position: relative;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
  }
  .scrollable {
    /* overflow-y: scroll; */
    height: 100%;
    /* padding-bottom: 5em; */
    /* opacity: 0; */
    /* transition: all .3s ease .3s; */
  }
  
  /* controls delayed fade in of messenger content */
  .icon-checkbox:checked ~ .msgr-container .scrollable {
    opacity: 1;  
  }
  /* controls delayed slide-up of messenger header */
  /* .icon-checkbox:checked ~ .msgr-container .scrollable .header {
    transform: translate(0);
    opacity: 1;
  } */
  /* controls delayed slide-in of messenger section content */
  .icon-checkbox:checked ~ .msgr-container .scrollable section {
    transform: translate(0);
    opacity: 1;
  }


  .hero {
    background: linear-gradient(to bottom right, var(--lightblue), var(--blue));
    height: 30%;
    width: 100%;
    position: absolute;
    top: 0;
    left: 0;
    z-index: -100;
  }
  .hero2 {
    height: 100%;
    width: 100%;
    position: absolute;
    top: 0;
    background: #f5f5f5;
    left: 0;
    z-index: -101;
  }

  .header {
    height: 70px;
    padding: 20px 20px 20px 20px;
    color: #fff;
    display: flex;
    flex-direction: column;
    /* justify-content: center; */
    line-height: 1.5;
    position: relative;
    
    /* controls slight rise on messenger opening */
  /*   transform: translateY(1em);
    opacity: 0;
    transition: all .6s ease .4s; */
  }
  .phone{
    color: #11a553;
    font-weight: 300;
    font-size:16px;
  }
  .whatsapp-text{
    /* display: inline-block; */
    /* text-align: center; */
    padding: 0 0 8px 0;
    margin-right: 10px;
  }
  .whatsapp{
    display: inline-block;
    text-align: center;
    position: absolute;
  }
  .header h1 {
    margin: -5px 0 10px 0;
    font-size: 1.5em;
    font-weight: 500;
  }
  .header p {
    font-size: .9em;
    opacity: .8;
  }
  .card-nup{
    width: 88%;
    margin: 15px auto 15px auto;
    border-radius: 7px !important;
    box-shadow: 0 2px 15px rgba(0,0,0,.2);
    background: #f5f5f5;
  }
  .nup{
    opacity: 1 !important;
    text-align: center !important;
    padding: 15px 0 10px 0;
    font-family: Lato, Helvetica, Arial, sans-serif;
    font-size: 24px;
    font-weight: normal;
    
  }
  .data{
    opacity: 1 !important;
    text-align: center !important;
    background: #f5f5f5;
    padding: 0px 20px 15px 20px;
    color: #555;
    line-height: 17px;
    font-size: 12px;
    border-radius: 7px;
  }
  .form-style{
    width: 88%;
    margin: 5% auto 0 auto;
  }
  .form-group {
    margin-bottom: 8px;
  }
  .form-control {
    display: block;
    width: 100%;
    padding: 7px 10px 6px 10px;
    font-size: 13px;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: .25rem;
    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    outline: none;
}
.text-muted {
  color: #aaa!important;
}

.form-text {
  display: block;
  margin-top: 4px;
}
.small, small {
  font-size: 67% !important;
  font-weight: 400;
}
.btn:not(:disabled):not(.disabled) {
  cursor: pointer;
}
.btn-primary {
  color: #fff;
  background: linear-gradient(to bottom right, var(--lightblue), var(--blue));
}
.btn-primary:hover {
  color: #fff !important;
  /* background: linear-gradient(to bottom right, var(--lightblue), var(--blue)); */
  border: 1px solid #aaa !important;
}
.btn {
  display: inline-block;
  margin-top: -3px;
  border-radius: 7px !important;
    font-weight: 400;
    text-align: center;
    white-space: nowrap;
    vertical-align: middle;
    -webkit-user-select: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
    padding: 5px 18px 6px 15px;
    width: 100px;
    font-size: 14px;
    line-height: 1.5;
    border-radius: .25rem;
    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
    letter-spacing: 0.5px;
    text-transform: none;
    outline: none;
    font-family: Lato, Helvetica, Arial, sans-serif;
}
[type=reset], [type=submit], button, html [type=button] {
  -webkit-appearance: button;
}
button, select {
  text-transform: none;
}
button, input {
  overflow: visible;
}
button, input, optgroup, select, textarea {
  margin: 0;
  font-family: inherit;
  font-size: inherit;
  line-height: inherit;
}
  .scrollable section {
    border-top: 2px solid var(--lightblue);
    background: #fff;
    border-radius: 5px;
    padding: 1.5em;
    margin: 1em;
    box-shadow: 0 2px 15px rgba(0,0,0,.2);
  
    transform: translateX(-6em);
    opacity: 0;
  }
/* ... */

